Add openmp sort and modified makedfile

--- a/sort/makefile
+++ b/sort/makefile
@@ -1,7 +1,7 @@
 CC := gcc
 NVCC := nvcc
-CFLAGS := -Wall -Wextra
-NVCCFLAGS := -arch=sm_89
+CFLAGS := -Wall -Wextra -fopenmp -O3
+NVCCFLAGS := -arch=sm_89 -O3
 
 # .c ファイルから実行ファイルを生成
 C_EXECUTABLES := $(patsubst %.c,%,$(wildcard *.c))
